// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextInput: type Url renders disabled 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4"
  >
    <div
      className="sc-oTTbF UYcZh"
      disabled={true}
    >
      <label
        className="sc-iKKmqK eRAvVB"
      >
        medium
      </label>
      <input
        className="sc-dIZBxk dPVOkx"
        disabled={true}
        placeholder=" "
        type="url"
        value="https://sportsbet.io"
      />
      <p
        className="sc-fOpBKL ithMSx"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-oTTbF UYcZh"
      disabled={true}
    >
      <label
        className="sc-iKKmqK eRAvVB"
      >
        large
      </label>
      <input
        className="sc-dIZBxk jythDm"
        disabled={true}
        placeholder=" "
        type="url"
        value="https://sportsbet.io"
      />
      <p
        className="sc-fOpBKL ithMSx"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-oTTbF UYcZh"
      disabled={true}
    >
      <div
        className="sc-MEQRl kBJTEJ"
      >
        <input
          className="sc-dIZBxk gGzdqY"
          disabled={true}
          placeholder=" "
          type="url"
          value="https://sportsbet.io"
        />
        <label
          className="sc-khrHlC jpbMtc"
        >
          xlarge
        </label>
      </div>
      <p
        className="sc-fOpBKL ithMSx"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Url renders error 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4"
  >
    <div
      className="sc-oTTbF eQlMmT"
    >
      <label
        className="sc-iKKmqK eRAvVB"
      >
        medium
      </label>
      <input
        className="sc-dIZBxk emmGGf"
        placeholder="e.g. https://sportsbet.io"
        type="url"
      />
      <p
        className="sc-fOpBKL eMFfDR"
        role="alert"
      >
        Error message
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-oTTbF eQlMmT"
    >
      <label
        className="sc-iKKmqK eRAvVB"
      >
        large
      </label>
      <input
        className="sc-dIZBxk MqtJU"
        placeholder="e.g. https://sportsbet.io"
        type="url"
      />
      <p
        className="sc-fOpBKL eMFfDR"
        role="alert"
      >
        Error message
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-oTTbF eQlMmT"
    >
      <div
        className="sc-MEQRl kBJTEJ"
      >
        <input
          className="sc-dIZBxk jKqydC"
          placeholder="e.g. https://sportsbet.io"
          type="url"
        />
        <label
          className="sc-khrHlC jpbMtc"
        >
          xlarge
        </label>
      </div>
      <p
        className="sc-fOpBKL eMFfDR"
        role="alert"
      >
        Error message
      </p>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Url renders readOnly 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4"
  >
    <div
      className="sc-oTTbF eQlMmT"
    >
      <label
        className="sc-iKKmqK eRAvVB"
      >
        medium
      </label>
      <input
        className="sc-dIZBxk dPVOkx"
        placeholder=" "
        readOnly={true}
        type="url"
        value="https://sportsbet.io"
      />
      <p
        className="sc-fOpBKL ithMSx"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-oTTbF eQlMmT"
    >
      <label
        className="sc-iKKmqK eRAvVB"
      >
        large
      </label>
      <input
        className="sc-dIZBxk jythDm"
        placeholder=" "
        readOnly={true}
        type="url"
        value="https://sportsbet.io"
      />
      <p
        className="sc-fOpBKL ithMSx"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-oTTbF eQlMmT"
    >
      <div
        className="sc-MEQRl kBJTEJ"
      >
        <input
          className="sc-dIZBxk gGzdqY"
          placeholder=" "
          readOnly={true}
          type="url"
          value="https://sportsbet.io"
        />
        <label
          className="sc-khrHlC jpbMtc"
        >
          xlarge
        </label>
      </div>
      <p
        className="sc-fOpBKL ithMSx"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Url renders with hint 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4"
  >
    <div
      className="sc-oTTbF eQlMmT"
    >
      <label
        className="sc-iKKmqK eRAvVB"
      >
        medium
      </label>
      <input
        className="sc-dIZBxk dPVOkx"
        placeholder="e.g. https://sportsbet.io"
        type="url"
      />
      <p
        className="sc-fOpBKL ithMSx"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-oTTbF eQlMmT"
    >
      <label
        className="sc-iKKmqK eRAvVB"
      >
        large
      </label>
      <input
        className="sc-dIZBxk jythDm"
        placeholder="e.g. https://sportsbet.io"
        type="url"
      />
      <p
        className="sc-fOpBKL ithMSx"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-oTTbF eQlMmT"
    >
      <div
        className="sc-MEQRl kBJTEJ"
      >
        <input
          className="sc-dIZBxk gGzdqY"
          placeholder="e.g. https://sportsbet.io"
          type="url"
        />
        <label
          className="sc-khrHlC jpbMtc"
        >
          xlarge
        </label>
      </div>
      <p
        className="sc-fOpBKL ithMSx"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Url renders with label 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4"
  >
    <div
      className="sc-oTTbF eQlMmT"
    >
      <label
        className="sc-iKKmqK eRAvVB"
      >
        medium
      </label>
      <input
        className="sc-dIZBxk dPVOkx"
        placeholder="e.g. https://sportsbet.io"
        type="url"
      />
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-oTTbF eQlMmT"
    >
      <label
        className="sc-iKKmqK eRAvVB"
      >
        large
      </label>
      <input
        className="sc-dIZBxk jythDm"
        placeholder="e.g. https://sportsbet.io"
        type="url"
      />
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-oTTbF eQlMmT"
    >
      <div
        className="sc-MEQRl kBJTEJ"
      >
        <input
          className="sc-dIZBxk gGzdqY"
          placeholder="e.g. https://sportsbet.io"
          type="url"
        />
        <label
          className="sc-khrHlC jpbMtc"
        >
          xlarge
        </label>
      </div>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Url renders with label RTL 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4"
  >
    <div
      className="sc-oTTbF eQlMmT"
    >
      <label
        className="sc-iKKmqK eRAvVB"
        dir="rtl"
      >
        medium
      </label>
      <input
        className="sc-dIZBxk dPVOkx"
        dir="rtl"
        placeholder="e.g. https://sportsbet.io"
        type="url"
      />
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-oTTbF eQlMmT"
    >
      <label
        className="sc-iKKmqK eRAvVB"
        dir="rtl"
      >
        large
      </label>
      <input
        className="sc-dIZBxk jythDm"
        dir="rtl"
        placeholder="e.g. https://sportsbet.io"
        type="url"
      />
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-oTTbF eQlMmT"
    >
      <div
        className="sc-MEQRl kBJTEJ"
      >
        <input
          className="sc-dIZBxk gGzdqY"
          dir="rtl"
          placeholder="e.g. https://sportsbet.io"
          type="url"
        />
        <label
          className="sc-khrHlC ckbtXb"
        >
          xlarge
        </label>
      </div>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Url renders without label 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4"
  >
    <div
      className="sc-oTTbF eQlMmT"
    >
      <input
        className="sc-dIZBxk dPVOkx"
        placeholder="medium"
        type="url"
      />
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-oTTbF eQlMmT"
    >
      <input
        className="sc-dIZBxk jythDm"
        placeholder="large"
        type="url"
      />
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-oTTbF eQlMmT"
    >
      <div
        className="sc-MEQRl kBJTEJ"
      >
        <input
          className="sc-dIZBxk fptWeR"
          placeholder="xlarge"
          type="url"
        />
        <label
          className="sc-khrHlC jpbMtc"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Url supports background colour 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4"
  >
    <div
      className="sc-oTTbF eQlMmT"
    >
      <label
        className="sc-iKKmqK eRAvVB"
      >
        medium
      </label>
      <input
        className="sc-dIZBxk kOuPuS"
        placeholder="e.g. https://sportsbet.io"
        type="url"
      />
      <p
        className="sc-fOpBKL ithMSx"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-oTTbF eQlMmT"
    >
      <label
        className="sc-iKKmqK eRAvVB"
      >
        large
      </label>
      <input
        className="sc-dIZBxk iEiYBx"
        placeholder="e.g. https://sportsbet.io"
        type="url"
      />
      <p
        className="sc-fOpBKL ithMSx"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-oTTbF eQlMmT"
    >
      <div
        className="sc-MEQRl cVOSay"
      >
        <input
          className="sc-dIZBxk gGzdqY"
          placeholder="e.g. https://sportsbet.io"
          type="url"
        />
        <label
          className="sc-khrHlC jpbMtc"
        >
          xlarge
        </label>
      </div>
      <p
        className="sc-fOpBKL ithMSx"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
</div>
`;
